--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,13 @@
 nguage: ruby
 rvm:
 - 2.2.0
-
 before_script:
- - chmod +x ./script/cibuild # or do this locally and commit
-
-# Assume bundler is being used, therefore
- # # the `install` step will run `bundle install` by default.
-script: ./script/cibuild
- #
- # # branch whitelist, only for GitHub Pages
- # branches:
- #   only:
- #     - gh-pages     # test the gh-pages branch
- #       - /pages-(.*)/ # test every branch which starts with "pages-"
- #
+- chmod +x ./script/cibuild
+script: "./script/cibuild"
 env:
   global:
-    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+before_install:
+- openssl aes-256-cbc -K $encrypted_5722a4a44b23_key -iv $encrypted_5722a4a44b23_iv
+  -in .deploy_key.enc -out .deploy_key -d
+- chmod 600 .deploy_key
