--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ rvm:
 - 2.2.0
 before_script:
 - chmod +x ./script/cibuild
-script: "./script/cibuild"
+script: 
+- bundle exec rake deploy
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
