--- a/_data/officers.yml
+++ b/_data/officers.yml
@@ -1,51 +1,51 @@
-- name: Daniel Fernandes
+- name: Ryan Grady
   title: President
-  email: hkn-pres[at]illinois.edu
+  email: hkn-pres@illinois.edu
 
-- name: Shawn Ahn
+- name: Hyunbin Park
   title: Vice President
-  email: hkn-vp[at]illinois.edu
+  email: hkn-vp@illinois.edu
 
-- name: Dawid Minorczyk
+- name: Seungjun Cho
   title: Treasurer
-  email: minorcz2[at]illinois.edu
+  email: sccho3@illinois.edu
 
-- name: Vibhakar Vemulapati
+- name: Alan Yang
   title: Director of Operations
-  email: vemulpt2[at]illinois.edu
+  email: asyang2@illinois.edu
 
-- name: Jon Pan-Doh
+- name: Todd Nguyen
   title: Director of Corporate Relations
-  email: hkn-corporate[at]illinois.edu
+  email: hkn-corporate@illinois.edu
 
-- name: Michael Fatina
+- name: Corey Snyder
   title: Director of Student Services
-  email: hkn-services[at]illinois.edu
+  email: hkn-services@illinois.edu
 
 - name: Evan Qi
   title: Director of Events
   email: eqi2[at]illinois.edu
 
-- name: Ryan Grady
+- name: Alec Wasowicz
   title: Director of Initiate Affairs
-  email: rgrady5[at]illinois.edu
+  email: wasowic2@illinois.edu
 
-- name: Corey Snyder
+- name: Anthony Li
   title: Director of Information
-  email: cesnyde2[at]illinois.edu
+  email: ali34@illinois.edu
 
-- name: Hyunbin Park
+- name: Rewa Sood
   title: Director of Outreach
-  email: hpark98[at]illinois.edu
+  email: rrsood2@illinois.edu
 
-- name: Edward Wu
+- name: TBA
   title: Director of Technology
-  email: hkn-tech[at]illinois.edu
+  email: hkn-tech@illinois.edu
 
-- name: Eli Longbottom
+- name: Kaidong Peng
   title: Director of Publicity
-  email: longbot2[at]illinois.edu
+  email: kpeng7@illinois.edu
 
-- name: Serena Li
+- name: Christopher Dunaway
   title: Secretary
-  email: sli61[at]illinois.edu
+  email: cdunawa2@illinois.edu
