Actually updated myself to be tech director this time.

--- a/_data/officers.yml
+++ b/_data/officers.yml
@@ -38,7 +38,7 @@
   title: Director of Outreach
   email: rrsood2@illinois.edu
 
-- name: TBA
+- name: Matthew Schuele
   title: Director of Technology
   email: hkn-tech@illinois.edu
 
