Changed officers to get rid of inconsistency with officer e-mails

--- a/_data/officers.yml
+++ b/_data/officers.yml
@@ -24,7 +24,7 @@
 
 - name: Evan Qi
   title: Director of Events
-  email: eqi2[at]illinois.edu
+  email: eqi2@illinois.edu
 
 - name: Alec Wasowicz
   title: Director of Initiate Affairs
