New code for initiates

--- a/_data/officers.yml
+++ b/_data/officers.yml
@@ -26,17 +26,17 @@
   title: Director of Events
   email: eqi2@illinois.edu
 
-- name: Alec Wasowicz
+- name: Molly Fane
   title: Director of Initiate Affairs
-  email: wasowic2@illinois.edu
+  email: mkfane2@illinois.edu
 
 - name: Anthony Li
   title: Director of Information
   email: ali34@illinois.edu
 
-- name: Rewa Sood
+- name: Vikram Anjur
   title: Director of Outreach
-  email: rrsood2@illinois.edu
+  email: vanjur2@illinois.edu
 
 - name: Matthew Schuele
   title: Director of Technology
