--- a/_data/officers.yml
+++ b/_data/officers.yml
@@ -1,51 +1,64 @@
 - name: Ryan Grady
   title: President
   email: hkn-pres@illinois.edu
+  img: spongebob.png 
 
 - name: Hyunbin Park
   title: Vice President
   email: hkn-vp@illinois.edu
+  img: spongebob.png 
 
 - name: Seungjun Cho
   title: Treasurer
   email: sccho3@illinois.edu
+  img: spongebob.png 
 
 - name: Alan Yang
   title: Director of Operations
   email: asyang2@illinois.edu
+  img: spongebob.png 
 
 - name: Todd Nguyen
   title: Director of Corporate Relations
   email: hkn-corporate@illinois.edu
+  img: spongebob.png 
 
 - name: Corey Snyder
   title: Director of Student Services
   email: hkn-services@illinois.edu
+  img: spongebob.png 
 
 - name: Evan Qi
   title: Director of Events
   email: eqi2@illinois.edu
+  img: spongebob.png 
 
 - name: Molly Fane
   title: Director of Initiate Affairs
   email: mkfane2@illinois.edu
+  img: spongebob.png 
 
 - name: Anthony Li
   title: Director of Information
   email: ali34@illinois.edu
+  img: spongebob.png 
 
 - name: Vikram Anjur
   title: Director of Outreach
   email: vanjur2@illinois.edu
+  img: spongebob.png 
 
 - name: Matthew Schuele
   title: Director of Technology
   email: hkn-tech@illinois.edu
+  img: matthew.jpg
 
 - name: Kaidong Peng
   title: Director of Publicity
   email: kpeng7@illinois.edu
+  img: spongebob.png 
 
 - name: Christopher Dunaway
   title: Secretary
   email: cdunawa2@illinois.edu
+  img: spongebob.png 
